my solution to lab5 not done yet